--- a/wacl/appconf.ini
+++ b/wacl/appconf.ini
@@ -3,7 +3,7 @@
 menuitems_list = parameters languages sources
 
 app_template = wacl.mako
-pacific_centered_maps = false
+pacific_centered_maps = true
 sitemaps = language parameter source
 
 [mako]
